Upload file size
Increase file upload size

--- a/src/Orchard.Azure/Orchard.Azure.Web/Web.config
+++ b/src/Orchard.Azure/Orchard.Azure.Web/Web.config
@@ -61,7 +61,7 @@
     <!-- ///TODO: Need to add machine key here -->
     <!-- <machineKey validationKey="" decryptionKey="" validation="SHA1" decryption="AES" /> -->
     
-    <httpRuntime requestValidationMode="2.0" />
+    <httpRuntime requestValidationMode="2.0" maxRequestLength="1024000" executionTimeout="360"/>
     <!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
