--- a/src/Orchard.Web/Web.config
+++ b/src/Orchard.Web/Web.config
@@ -50,7 +50,7 @@
   <system.web>
     <!--<trust level="Medium" originUrl="" />-->
 
-    <httpRuntime requestValidationMode="2.0" />
+    <httpRuntime requestValidationMode="2.0" maxRequestLength="1024000" executionTimeout="360" />
     <!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
