--- a/src/Orchard.Web/Media/web.config
+++ b/src/Orchard.Web/Media/web.config
@@ -4,6 +4,8 @@
     <add key="webpages:Enabled" value="false" />
   </appSettings>
   <system.web>
+  
+    <httpRuntime maxRequestLength="1024000" executionTimeout="360"/>
     <httpHandlers>
       <!-- iis6 - for any request in this location, return via managed static file handler -->
       <add path="*" verb="*" type="System.Web.StaticFileHandler" />
