Upload file size
Upload file size increase

--- a/src/Orchard.Web/Modules/Orchard.Media/web.config
+++ b/src/Orchard.Web/Modules/Orchard.Media/web.config
@@ -27,6 +27,7 @@
   </system.web.webPages.razor>
 
   <system.web>
+  <httpRuntime maxRequestLength="1024000" executionTimeout="360"/>
     <compilation targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"/>
